# Study_agent_service

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  FULL_REGEN_FROZEN_SETS_EDGE_CASES.txt  QC_PIPELINE_INCONSISTENCIES_AUDIT.txt  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
docs/: sequence-diagrams.md
scripts/: REFERENCE_PDF_MANUAL_RECOVERY.md  cleanup_reference_materials_and_generation_runs.py  migrate_barrel_imports.py  reset_space_batch_queue.py  smoke_mentor_visibility.py  smoke_phase3_transactions.py
src/api/: __init__.py  main.py
test_new_prompts/prompts/: __init__.py  concept_checklist_prompt.py  generation_prompt.py  improvement_prompt.py  qc_retry_verification_prompt.py  qc_verification_prompt.py  regeneration_prompt.py  section_insert_prompt.py  section_rework_prompt.py
test_new_prompts/runners/: _paths.py  _pipeline_state.py  _prompt_loader.py  _run_output.py  _types.py  concept_checklist_runner.py  generation_runner.py  qc_runner.py  retry_runner.py  run_prompt_test.py  test_inputs.py
test_pipeline_output/: llamaparse_raw_20260622_154229.json
test_pipeline_output/FastAPI_20260622_154418/: aggregated_summaries.md  run_metadata.json  study_material.md
test_pipeline_output/FastAPI_20260622_155148/: aggregated_summaries.md  run_metadata.json  study_material.md
test_pipeline_output/FastAPI_20260622_155427/: aggregated_summaries.md  run_metadata.json  study_material.md
test_pipeline_output/FastAPI_20260622_160055/: aggregated_summaries.md  run_metadata.json  study_material.md
test_pipeline_output/FastAPI_20260622_172311/: aggregated_summaries.md  run_metadata.json  study_material.md
test_pipeline_output/FastAPI_Tutorial_20260622_200944/: aggregated_summaries.md  run_metadata.json  study_material.md
tests/: chunk_summarizer_prompt.py  conftest.py  test.py  test_async_generation_routes.py  test_batch_orchestration_service.py  test_batch_tasks.py  test_block_placement_checks.py  test_block_placement_remediation.py  test_concept_checklist_parse.py  test_concept_checklist_prompt.py  test_content_lifecycle_visibility.py  test_document_merge.py  test_domain_merge.py  test_domain_prompt_snapshots.py  test_frozen_content_lineage.py  test_gcs_storage.py  test_generation_outcome_classifier.py  test_generation_progress_authorization.py  test_generation_progress_profiles.py  test_generation_run_concurrency.py  test_generation_run_dispatch.py  test_generation_run_idempotency.py  test_generation_run_resume_api.py  test_graph_runner.py  test_hint_prompt.py  test_hint_regenerate_all.py  test_hint_resume_router.py  test_llamaparse_lifecycle.py  test_load_generation_context.py  test_manual_test_gate_lifecycle.py  test_media_access_token.py  test_object_storage.py  test_output_schemas.py  test_panel_access_contract.py  test_pass_threshold.py  test_placement_false_positive_fixes.py  test_qc_deterministic.py  test_qc_groq_infra.py  test_qc_json_parse.py  test_qc_placement_integration.py  (+48 more)
tests/test_chunk/: hierarchical_prompt.py  test_chunk_strategy.py  test_chunk_stratergy.py
(+649 files in other folders)
