[project]
name = "study-agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # Style errors
    "F",  # Unused imports, undefined variables
    "I",  # Import sorting
    "UP", # Python modernization
    "B",  # Common bug patterns
]

[tool.ruff.lint.per-file-ignores]
"src/api/rest/**/*.py" = ["B008", "E501"]
"src/api/data/models/**/*.py" = ["E501"]
"src/api/schemas/**/*.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
mypy_path = "."
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true