[project]
name = "study-agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.31.0",
    "fastapi==0.136.1",
    "PyJWT==2.12.1",
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.14.1",
    "python-multipart==0.0.29",
    "sqlalchemy==2.0.49",
    "uvicorn==0.47.0",
    "llama-cloud>=2.9.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",
    "reportlab>=4.2.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # Style errors
    "F",  # Unused imports, undefined variables
    "I",  # Import sorting
    "UP", # Python modernization
    "B",  # Common bug patterns
]

[tool.ruff.lint.per-file-ignores]
"src/api/rest/**/*.py" = ["B008", "E501"]
"src/api/data/models/**/*.py" = ["E501"]
"src/api/schemas/**/*.py" = ["E501"]
"src/api/control/**/*.py" = ["E501"]
"src/api/core/**/*.py" = ["E501"]
"src/api/utils/**/*.py" = ["E501"]
"src/api/data/**/*.py" = ["E501"]
"alembic/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
mypy_path = "."
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = false
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "src.api.core.*",
    "src.api.data.*",
    "src.api.utils.*",
]
disable_error_code = [
    "arg-type",
    "assignment",
    "return-value",
    "call-overload",
    "index",
    "typeddict-item",
    "operator",
    "misc",
]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true
